Added a VM option in configuration: --add-exports java.base/sun.nio.ch=ALL-UNNAMED");